--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
 explore a dreamlike environment
+
+the problem is working out how to generate a new frame full of pixels purely based on the previous frame to create a meaningful environment
+ood results cannot be achieved procedurally and out of context. information on world generation, position, etc. is required
