zlm as a package module

--- a/readme
+++ b/readme
@@ -2,3 +2,5 @@ explore a dreamlike environment
 
 the problem is working out how to generate a new frame full of pixels purely based on the previous frame to create a meaningful environment
 ood results cannot be achieved procedurally and out of context. information on world generation, position, etc. is required
+
+Claude Monet <3 omg. why am i so into impressionism rn?? wait its cause its cool
